test_suite/tests/ui/enum-representation/internal-tuple-variant.stderr
error: #[serde(tag = "...")] cannot be used with tuple variants
 --> tests/ui/enum-representation/internal-tuple-variant.rs:6:5
  |
6 |     Tuple(u8, u8),
  |     ^^^^^^^^^^^^^
